[package]
name = "clickhouse_ndc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
ndc-sdk = { git = "https://github.com/hasura/ndc-hub" }
peg = "0.8.1"
async-trait = "0.1.72"
prometheus = "0.13.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
schemars = "0.8.12"
indexmap = "1"
reqwest = "0.11.20"
strum = { version = "0.25.0", features = ["derive"] }
