[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
config = { path = "../config" }
reqwest = { version = "0.11.27", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
