[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.12.3", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
peg = "0.8.2"
schemars = "0.8.16"
