[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.6.0"
peg = "0.8.2"
reqwest = { version = "0.12.3", features = [
    "json",
    "rustls-tls",
], default-features = false }
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
