[package]
name = "ndc-clickhouse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
client = { path = "../client" }
config = { path = "../config" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs"] }
