[package]
name = "ndc-clickhouse-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
common = { path = "../common" }
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs"] }
