[package]
name = "ndc-clickhouse-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.78"
common = { path = "../common" }
http = "0.2"
indexmap = "2.1.0"
ndc-models = { workspace = true }
ndc-sdk-core = { workspace = true }
prometheus = "0.13.3"
reqwest = { version = "0.12.3", features = [
  "json",
  "rustls-tls",
], default-features = false }
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlformat = "0.2.3"
thiserror = "1.0.64"
tokio = "1.36.0"
tracing = "0.1.40"

[dev-dependencies]
insta = { version = "1.40.0", features = ["yaml", "glob", "json"] }
schemars = "0.8.16"
