[package]
name = "ndc-clickhouse"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.78"
common = { path = "../common" }
indexmap = "2.1.0"
ndc-sdk = { git = "https://github.com/hasura/ndc-sdk-rs", rev = "7b56fac", package = "ndc-sdk" }
prometheus = "0.13.3"
reqwest = { version = "0.11.27", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlformat = "0.2.3"
strum = { version = "0.26.2", features = ["derive"] }
tokio = "1.36.0"
